BundleInfo: fix deprecation warning on toURL calls
Signed-off-by: Ferry Huberts <ferry.huberts@pelagic.nl>